// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mount an complete notification-dialog 1`] = `
<CompleteNotificationDialog>
  <div>
    <NotificationDialog
      actions={
        Array [
          Object {
            "key": "action",
            "onClick": [Function],
            "text": "Ok",
          },
          Object {
            "key": "dismiss",
            "onClick": [Function],
            "text": "Close",
          },
        ]
      }
      message="The Main Instruction is text used to provide more detail or define terminology. Don’t repeat the title verbatim."
      onRequestClose={[Function]}
      showNotificationDialog={false}
      title="Make sure that the title relates directly to the choices."
      variant="Alert"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger NotificationDialog"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        aria-label={null}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <span
          className="text-only"
        >
          <span
            className=""
          >
            Trigger NotificationDialog
          </span>
        </span>
      </button>
    </Button>
  </div>
</CompleteNotificationDialog>
`;

exports[`should mount an complete notification-dialog with long message 1`] = `
<CompleteNotificationDialog>
  <div>
    <NotificationDialog
      actions={
        Array [
          Object {
            "key": "action",
            "onClick": [Function],
            "text": "Ok",
          },
          Object {
            "key": "dismiss",
            "onClick": [Function],
            "text": "Close",
          },
        ]
      }
      message="This is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the message"
      onRequestClose={[Function]}
      showNotificationDialog={false}
      title="This is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the title"
      variant="Success"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger NotificationDialog"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        aria-label={null}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <span
          className="text-only"
        >
          <span
            className=""
          >
            Trigger NotificationDialog
          </span>
        </span>
      </button>
    </Button>
  </div>
</CompleteNotificationDialog>
`;

exports[`should shallow a complete notification-dialog 1`] = `
<div>
  <NotificationDialog
    actions={
      Array [
        Object {
          "key": "action",
          "onClick": [Function],
          "text": "Ok",
        },
        Object {
          "key": "dismiss",
          "onClick": [Function],
          "text": "Close",
        },
      ]
    }
    message="The Main Instruction is text used to provide more detail or define terminology. Don’t repeat the title verbatim."
    onRequestClose={[Function]}
    showNotificationDialog={false}
    title="Make sure that the title relates directly to the choices."
    variant="Alert"
  />
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger NotificationDialog"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow a complete notification-dialog with long message 1`] = `
<div>
  <NotificationDialog
    actions={
      Array [
        Object {
          "key": "action",
          "onClick": [Function],
          "text": "Ok",
        },
        Object {
          "key": "dismiss",
          "onClick": [Function],
          "text": "Close",
        },
      ]
    }
    message="This is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the message"
    onRequestClose={[Function]}
    showNotificationDialog={false}
    title="This is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the title"
    variant="Success"
  />
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger NotificationDialog"
    type="button"
    variant="neutral"
  />
</div>
`;
